# jiangnansizhu_data_prepare

./: .gitignore  README.md  parse_notes.py  read_qmx.py
jianpu_annotator_tauri/: index.html  package-lock.json  package.json
jianpu_annotator_tauri/src/: annotation.js  main.js  renderer.js  styles.css
jianpu_annotator_tauri/src-tauri/: Cargo.toml  tauri.conf.json
jianpu_annotator_tauri/src-tauri/capabilities/: default.json
jianpu_annotator_tauri/src-tauri/icons/: icon.icns
jianpu_annotator_tauri/src-tauri/src/: lib.rs
