[package]
name = "jianpu-annotator"
version = "1.0.0"
description = "简谱标注器 - Jianpu Annotator"
authors = [""]
edition = "2021"

[lib]
name = "jianpu_annotator_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
